--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -8,9 +8,13 @@ spring:
     username: root
     password:
     driver-class-name: com.mysql.cj.jdbc.Driver
-  sql:
-    init:
-      mode: always
+
 logging:
   file:
-    name: my.log
+    name: user-service.log
+#  level:
+#    root: OFF
+
+mybatis-plus:
+  # mapper.xml文件所在路径，多个路径用逗号隔开
+  mapper-locations: classpath*:/mapper/**/*.xml
