--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -48,6 +48,13 @@
             <version>3.5.3.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+            <scope>test</scope>
+        </dependency>
+
 
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
